package co.edu.utp.misiontic2022.c2.cdiaz.model.entity;

public enum Jornada {
    DIURNA, NOCTURNA
}
